Rename project to SottoDuo
